examples/errors/activation_in_component_diagram_block.orr
// Error Example: Activation Block in Component Diagram
//
// Activation (both blocks and explicit statements) is only supported in sequence diagrams.
// Using an activate block inside a component diagram should produce an error.

diagram component;

user: Rectangle;
server: Rectangle;

// âŒ Invalid: activation block not allowed in component diagrams
activate user {
    user -> server: "Request";
};
